# Grinder

./: .gitignore  sdkconfig.defaults
fingerprint_recognition/: CMakeLists.txt
fingerprint_recognition/main/: CMakeLists.txt  fingerprint_recognition.c
grinder/: CMakeLists.txt
grinder/main/ui/: ui.c  ui.h  ui_helpers.c  ui_helpers.h
grinder/main/ui/components/: ui_comp_hook.c
grinder/main/ui/images/: ui_img_account_unchecked_icon_png.c  ui_img_account_unchecked_png.c  ui_img_fingerprint_unchecked_png.c  ui_img_home_unchecked_icon_png.c  ui_img_iw_logo_200x106_png.c  ui_img_setting_checked_icon_png.c  ui_img_user_sign_out_png.c
grinder/main/ui/screens/: ui_Screen1.c
main/: idf_component.yml
main/ui/: CMakeLists.txt  filelist.txt  ui_events.c  ui_events.h
main/ui/fonts/: ui_font_Font_cn_25.c  ui_font_Font_cn_28.c  ui_font_Font_cn_36.c  ui_font_Font_num_86.c  ui_font_Font_number_64.c
main/ui/images/: ui_img_account_checked_png.c  ui_img_home_checked_icon_png.c  ui_img_setting_unchecked_icon_png.c  ui_img_start_png.c  ui_img_stop_png.c
main/ui/screens/: ui_Screen2.c
